@@ -35,9 +35,9 @@ const size_t CMD_RESTART_LEN     = sizeof(CMD_RESTART);
 const size_t CMD_RTP_LEN         = sizeof(CMD_RTP);
 
 const char UDPXY_COPYRIGHT_NOTICE[] =
-    "udpxy and udpxrec are Copyright (C) 2008-2013 Pavel V. Cherenkov and licensed under GNU GPLv3";
+    "udpxy and udpxrec are Copyright (C) 2008-2018 Pavel V. Cherenkov and licensed under GNU GPLv3";
 const char UDPXY_CONTACT[] =
-    "Contact: www.udpxy.com/forum; support@udpxy.com";
+    "Email: support@udpxy.com; Telegram: GigaX-discussions; Google+: udpxy community";
 
 #ifndef TRACE_MODULE
   const char COMPILE_MODE[] = "lean";
