@@ -90,14 +90,14 @@ mk_client_entries( const struct server_ctx* ctx,
                     ctx->cl[i].pid,
                     client->src_addr, client->src_port,
                     client->mcast_addr, client->mcast_port,
-                    client->tail ? client->tail : "",
+                    client->tail[0] ? client->tail : "",
                     tpstat_str( &(client->tstat), tpinfo,
                                 sizeof(tpinfo) ) );
             if( n <= 0 ) break;
 
             if (n > max_cli_mem)
                 max_cli_mem = n;
-            if (client->tail && (ssize_t)strlen(client->tail) > max_cli_tail)
+            if (client->tail[0] && (ssize_t)strlen(client->tail) > max_cli_tail)
                 max_cli_tail = strlen(client->tail);
 
             total += n;
